2019-07-18 Sergey Kashyrin <ska@kiska.net>
	* Fixed extremely heavy bug for EXEC SQL CALL with COMP-3 parameters

2019-07-02 Sergey Kashyrin <ska@kiska.net>
	* Small fix for EXEC SQL DISCONNECT END-EXEC

2019-02-26 Sergey Kashyrin <ska@kiska.net>
	* Attempt to implement EXEC SQL CALL for stored procedures

2019-01-10 Sergey Kashyrin <ska@kiska.net>
	* Switching from MOVE ADDRESS to SET due to non-GNU COBOL limitations

2018-10-03 Sergey Kashyrin <ska@kiska.net>
	* Allowing COMP-X through temporary variables
	* Relaxing indicator variable type a little bit if generated temp variable is S9(4) COMP-5.
	* Fixing small typo bug for OPEN CURSOR with qualified (A.B) parameter

2018-10-02 Sergey Kashyrin <ska@kiska.net>
	* Fixing major bug introduced on 2018-08-31 for CURSOR processing (Thanks, Ron !)
	* Ignoring EXEC SQL INVOKE
	* Ignoring 88 level items in DECLARE SECTION (was producing error)
	* Changing S9(7) COMP-5 to S9(9) COMP-5 for intermediate variables (I am assuming there is no real difference)

2018-08-31 Sergey Kashyrin <ska@kiska.net>
	* Accepting EXEC SQL DISCONNECT
	* Adding -F flag to accept unknown SQL statements as "EXECUTE IMMEDIATE"
	* Implementing EXEC SQL WHENEVER
	* Ignoring EXEC SQL DECLARE other than CURSOR (i.e. DECLARE TABLE)

2018-08-08 Sergey Kashyrin <ska@kiska.net>
	* Now SQL DECLARE SECTION is not necessary for SQL INCLUDE
	* Fixing bug when there is a space between : and SQL variable like ": A"

2018-08-07 Sergey Kashyrin <ska@kiska.net>
	* For level 49 on little-endian automatically changing COMP/COMP-4 to COMP-5

Changes from 2005 to 2018 were not recorded and it will be too much work to analyze SourceSafe :-)